@@ -1,28 +1,4 @@
 <el>
-	<!--<templateFile>
-		<TCEforms>
-			<label>LLL:EXT:ics_gmap3/locallang.xml:provider.tagList.templateFile</label>	
-			<config>
-				<type>input</type>
-				<eval>trim</eval>
-				<default>EXT:ics_gmap3/res/template_gmap3_tagList.html</default>
-				<wizards type="array">
-					<_PADDING>2</_PADDING>
-					<link type="array">
-						<type>popup</type>
-						<title>Link</title>
-						<icon>link_popup.gif</icon>
-						<script>browse_links.php?mode=wizard&amp;act=file</script>
-						<params type="array">
-							<blindLinkOptions>page,url,mail,spec</blindLinkOptions>
-							<allowedExtensions>htm,html,tmpl,tpl</allowedExtensions>
-						</params>
-						<JSopenParams>height=300,width=500,status=0,menubar=0,scrollbars=1</JSopenParams>
-					</link>
-				</wizards>
-			</config>
-		</TCEforms>
-	</templateFile>-->
 	<exclusivesTags>
 		<TCEforms>
 			<label>LLL:EXT:ics_gmap3/locallang.xml:provider.tagList.exclusivesTags</label>	
